--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ section{
 #home{
     background-color: #333333;
     color: white;
-    margin-left: 25%;
+    padding-left: 25%;
     align-items: flex-start; 
 }
 
@@ -111,6 +111,7 @@ section{
 #about .title{
     font-family: 'Montserrat', Verdana;
     color: #333333;
+    margin-top: 25px;
     font-weight: 600;
     font-size: 40px;
 }
@@ -122,6 +123,13 @@ section{
     justify-content: space-evenly;
     align-items: center;
 }
+#about .about-body .my-img{
+    width: 50%;
+    height: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 #about .about-body .my-img img{
     width: 400px;
     height: 600px;
@@ -130,11 +138,10 @@ section{
 #about .about-body .seperator{
     width: 5px;
     height: 100%;
-    margin: 15px;
     background:coral;
 }
 #about .about-body .info{
-    width: 55%;
+    width: 50%;
     height: 85%;
     display: flex;
     justify-content: center;
@@ -161,6 +168,58 @@ section{
 #about .about-body .info .dwnld-cv:hover{
 background-color: coral;
 }
+/* skills section  */
+#skills{
+    background-color: #333333;
+    color: white;
+    
+}
+#skills .skills-body{
+    width: 90%;
+    height: 80%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+}
+#skills .skills-body .pie-charts-info{
+    width: 100%;
+    font-family: 'Roboto Mono', sans-serif;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+}
+#skills .skills-body .pie-charts-info .piechart{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+}
+#skills .skills-body .pie-charts-info .piechart p{
+    font-size: 30px;
+    padding-top: 15px;
+}
+.pie{
+    size: 100px;
+}
+#skills .title{
+    font-family: 'Montserrat', Verdana;
+    color: white;
+    margin-top: 25px;
+    font-weight: 600;
+    font-size: 40px;
+}
+
+#skills p{
+    text-align: justify;
+}
+/* research section  */
+#research{
+    background-color: white;
+    color:#333333
+}
+
 /* projects section  */
 #projects{
     background-color: #333333;
@@ -210,7 +269,7 @@ background-color: coral;
        font-size:30px;
     }
     #home{
-    margin-left: 5%;
+    padding-left: 5%;
     align-items: flex-start; 
     }
     .home-content .text1{
@@ -270,31 +329,35 @@ background-color: coral;
        font-size:30px;
     }
     #home{
-        margin-left: 5%;
+        padding-left: 5%;
         align-items: flex-start; 
     }
-    .home-content .text1{
+    #home .home-content .text1{
         font-size: 45px;
         font-weight: 600;
         color: coral;
     }
-    .home-content .text2{
+    #home .home-content .text2{
         font-size: 20px;
     }
 
-    #about .about-body .my-img img{
+    #about .about-body .my-img{
         display: none;
     }
     #about .about-body .seperator{
         display: none;
     }
-    #about .title{
+    #about .title, #skills .title{
         padding: 0;
         margin: 0;
     }
-    #about .about-body{
+    #about .about-body, #skills .skills-body{
         padding: 0;
         margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
     #about .about-body .info{
         width: 100%;
@@ -304,34 +367,46 @@ background-color: coral;
         align-items: center;
         flex-direction: column;
     }
-    #about .about-body .info .info-text{
+    #about .about-body .info .info-text, #skills p{
         font-size: 14px;
-        padding: 0;
-        margin: 10px;
+        /* padding: 10px; */
         margin-bottom: 15px;
         text-align: justify;
     
     }
     #about .about-body .info .dwnld-cv{
-        margin-top: 0px;
         padding: 5px;
-        background-color: coral;
+        background-color: #ff7f50;
     }
     #about .about-body .info .dwnld-cv:hover{
         background-color: none;
     }
+    #skills .skills-body .pie-charts-info .piechart p{
+        font-size: 20px;
+    }
 }
 
 @media (max-width: 350px) {
-    #about .title{
+    #about .title, #skills .title{
         font-size: 30px;
         padding: 0;
         margin: 0;
     }
-    #about .about-body{
+    #about .about-body, #skills .skills-body{
         padding: 0;
         margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
+    #about .about-body .my-img{
+        display: none;
+    }
+    #about .about-body .seperator{
+        display: none;
+    }
+    
     #about .about-body .info{
         width: 100%;
         height: 100%;
@@ -340,10 +415,9 @@ background-color: coral;
         align-items: center;
         flex-direction: column;
     }
-    #about .about-body .info .info-text{
+    #about .about-body .info .info-text, #skills p{
         font-size: 11px;
         padding: 0;
-        margin: 10px;
         text-align: justify;
     
     }
@@ -354,5 +428,9 @@ background-color: coral;
     }
     #about .about-body .info .dwnld-cv:hover{
         background-color: none;
+    }
+    #skills .skills-body .pie-charts-info{
+        zoom: 0.7;
+        -moz-transform: scale(0.5);
     }
 }
