--- a/style.css
+++ b/style.css
@@ -336,6 +336,46 @@ section {
     color: white;
 }
 
+#projects .title {
+    font-family: 'Montserrat', Verdana;
+    color: white;
+    margin-top: 25px;
+    font-weight: 600;
+    font-size: 40px;
+}
+
+#projects .projects-body {
+    width: 80%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#projects .projects-body .project-types{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.mldl,
+.appdev,
+.webdev,
+.miscprojects{
+    border: solid 3px coral;
+    padding: 5px 15px;
+    height: 30px;
+    text-align: center;
+    border-radius: 30px;
+    transition: all 0.3s ease;
+}
+.mldl:hover,
+.appdev:hover,
+.webdev:hover,
+.miscprojects:hover{
+    background: coral;
+    color: #333333;
+    font-weight: 600;
+}
 
 /* contact section  */
 
