--- a/style.css
+++ b/style.css
@@ -350,6 +350,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 #projects .projects-body .project-types{
     width: 100%;
@@ -364,8 +365,10 @@ section {
     border: solid 3px coral;
     padding: 5px 15px;
     height: 30px;
+    width: 75px;
     text-align: center;
     border-radius: 30px;
+    font-weight: 600;
     transition: all 0.3s ease;
 }
 .mldl:hover,
@@ -376,6 +379,30 @@ section {
     color: #333333;
     font-weight: 600;
 }
+.mldl.active,
+.appdev.active,
+.webdev.active,
+.miscprojects.active{
+    background: coral;
+    color: #333333;
+    font-weight: 600;
+}
+.mldlbody,
+.appdevbody,
+.webdevbody,
+.miscbody{
+    margin: 25px;
+    width: 100%;
+    height:100%;
+    background: coral;
+}
+
+.appdevbody,
+.webdevbody,
+.miscbody{
+    display:none;
+}
+
 
 /* contact section  */
 
@@ -709,9 +736,5 @@ section {
         align-items: center;
         justify-content: center;
     }
-<<<<<<< HEAD
-
-=======
->>>>>>> update_branch
     
 }
