--- a/style.css
+++ b/style.css
@@ -261,6 +261,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 0;
 }
 #research .research-body .research-carousel{
     width: 100%;
@@ -272,23 +273,23 @@ section {
     color: white;
 }
 #research .research-body .research-carousel .card .card-body{
-    padding: 30px;
-    height: 600px;
+    padding: 15px;
+    height: 480px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
 } 
 #research .research-body .research-carousel .card .card-body .paper-title{
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 600;
-    height: 100px;
+    height: 75px;
     text-align: center;
 }
 #research .research-body .research-carousel .card .card-body .summary{
-    height: 450px;
+    height: 250px;
     padding-top: 20px;
-    font-size: 20px;
+    font-size: 15px;
     text-align: justify;
 }
 
@@ -421,26 +422,8 @@ section {
         text-align: justify;
     }
     #research .research-body .research-carousel .card .card-body{
-        height: 550px;
+        height: 400px;
     }
-    #research .research-body .research-carousel .card .card-body .paper-title{
-        height: 75px;
-        padding-top: 5px;
-        font-size: 25px;
-    }
-    #research .research-body .research-carousel .card .card-body .summary{
-        height: 300px;
-        font-size: 18px;
-        text-align: justify;
-    }
-    #research .research-body .card .card-body .card-btns{
-        padding-top: 20px;
-        width: 50px;
-        height: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    } 
     .owl-dots{
         text-align: center;
         margin-top: 20px;
@@ -524,13 +507,16 @@ section {
         height: 80%;
         z-index: 0;
     }
+    #research .research-body .research-carousel .card .card-body{
+        height: 350px;
+    }
     #research .research-body .research-carousel .card .card-body .paper-title{
-        height: 60px;
+        height: 30px;
         padding-top: 5px;
         font-size: 20px;
     }
     #research .research-body .research-carousel .card .card-body .summary{
-        height: 300px;
+        height: 250px;
         font-size: 15px;
         text-align: justify;
     }
@@ -614,13 +600,13 @@ section {
         width: 100%;
         height: 100%;
         display: flex;
-        justify-content: center;
+        justify-content: start;
         align-items: center;
         flex-direction: column;
     }
     #about .about-body .info .info-text,
     #skills p {
-        font-size: 14px;
+        font-size: 13px;
         /* padding: 10px; */
         margin-bottom: 15px;
         text-align: justify;
@@ -632,15 +618,26 @@ section {
     #about .about-body .info .dwnld-cv:hover {
         background-color: none;
     }
+    #skills .skills-body{
+        padding-top: 10px;
+        justify-content: start;
+    }
     #skills .skills-body .pie-charts-info .piechart p {
         font-size: 20px;
+    }
+    #skills .skills-body .pie-charts-info {
+        margin-left: 20px;
+        margin-right: 20px;
+        zoom: 0.6;
+        -moz-transform: scale(0.6);
     }
     #research .research-body{
         height: 80%;  
         z-index: 0;
     }
+    
     #research .research-body .research-carousel .card .card-body{
-        height: 450px;
+        height: 380px;
     }
     #research .research-body .research-carousel .card .card-body .paper-title{
         height: 60px;
@@ -729,12 +726,16 @@ section {
         text-align: justify;
     }
     #research .research-body .card .card-body .card-btns{
-        padding-top: 20px;
-        width: 40px;
-        height: 20px;
+        padding: 40px 0;
+        width: 30px;
+        height: 5px;
         display: flex;
         align-items: center;
         justify-content: center;
     }
-    
+    .paper-icon,
+    .github-icon{
+        width: 20px;
+        height: 30px;
+    }
 }
