added content in reseacrh page

--- a/style.css
+++ b/style.css
@@ -10,6 +10,17 @@ body {
     height: 100vh;
     overflow: hidden
 }
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover 
+{
+     color:white; 
+     text-decoration:none; 
+     cursor:pointer;  
+}
 
 .container {
     width: 100%;
